Fixed the layout issue of the footer, created the margin class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,10 @@ p {
   margin: 0 auto 0 auto;
 }
 
+.margin {
+  margin-top: 5rem !important;
+}
+
 /* ------ sections ------*/
 *,
 *::after,
@@ -176,6 +180,7 @@ html {
   height: 25rem;
   background-color: #2b2b2b;
   color: #f3f7fb;
+  z-index: 10;
 }
 .footer__logo img {
   align-self: center;
@@ -444,7 +449,7 @@ html {
 
 .example {
   width: 100%;
-  height: 746px;
+  height: 800px;
   background-image: url(../images/svg/example-backgroud.svg);
   background-size: cover;
   background-repeat: none;
