--- a/assets/sass/items/_classes.scss
+++ b/assets/sass/items/_classes.scss
@@ -6,3 +6,7 @@
   max-width: 1366px;
   margin: 0 auto 0 auto;
 }
+
+.margin {
+  margin-top: 5rem !important;
+}
