--- a/assets/sass/sections/_example.scss
+++ b/assets/sass/sections/_example.scss
@@ -1,6 +1,6 @@
 .example {
   width: 100%;
-  height: 746px;
+  height: 800px;
   background-image: url(../images/svg/example-backgroud.svg);
   background-size: cover;
   background-repeat: none;
